@@ -3,30 +3,29 @@ package edu.colorado.phet.common.phetcommon.model;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
- * This adapter class converts an enumeration property to a boolean property indicating true if the specified element is selected.
- * It can be used, e.g. to map the enumeration property values into boolean radio button handlers.
+ * This adapter class converts an enumeration property to a boolean property indicating
+ * true if the specified property has the specified value.
+ * <p>
+ * Note that this class is not recommend for radio button handlers; use PropertyRadioButton.
  *
  * @param <T> the property value type
  * @author Sam Reid
  */
 public class IsSelected<T> extends BooleanProperty {
-    public IsSelected( final T a, final Property<T> p ) {
-        super( p.getValue() == a );
-        p.addObserver( new SimpleObserver() {
+    
+    public IsSelected( final Property<T> property, final T value ) {
+        super( property.getValue() == value );
+        property.addObserver( new SimpleObserver() {
             public void update() {
-                setValue( p.getValue().equals( a ) );
+                setValue( property.getValue().equals( value ) );
             }
         } );
         addObserver( new SimpleObserver() {
             public void update() {
                 if ( getValue() ) {
-                    p.setValue( a );
+                    property.setValue( value );
                 }
             }
         } );
-    }
-
-    public static <T> BooleanProperty isSelected( T a, Property<T> p ) {
-        return new IsSelected<T>( a, p );
     }
 }
