@@ -73,6 +73,6 @@ public class Property<T> extends SimpleObservable {
     //TODO move this elsewhere, base class shouldn't be creating instances of subclasses
     //Todo: should this be cached?  In scala we would just make it lazy.
     public BooleanProperty is(T value){
-        return new IsSelected<T>( value, this );
+        return new IsSelected<T>( this, value );
     }
 }
